--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,20 @@
-.page {
-  background-color: #333;
+body {
+  background-color: #f2f2f2;
 }
 
-.page header {
+.page {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.hero {
+  text-align: center;
 }
 
 .reveal {
-  animation-name: reveal;
+  animation: reveal 1s forwards;
 }
 
 @keyframes reveal {
